--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 	
 	<p><a href="TP3-1.pdf">Telecharger le fichier de la ville</a></p>
 	
-	<img src="image4.jpg" class="flat flottante">
-	<img src="image4.jpg" class="flat flottante">
-	<img src="image4.jpg" class="flat flottante">
+	<img src="image4.jpg" class="flat"="flottante">
+	<img src="image4.jpg" class="flat"="flottante">
+	<img src="image4.jpg" class="flat"="flottante">
 </p>
 	<p class="se"><button><a href="mailto: salomonkoumedjina@gmail.com" title="e-mail">Contactez-moi</a></button></p>
 	<h3>cliquez le lien en desssous pour ma page suivante</h3>
